smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-missing-value.smithy
// Syntax error at line 2, column 10
$version:
